# benjaminschmidt.github.io

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  postgres.yaml  pyproject.toml  renovate.json
.forgejo/workflows/: build.yaml  pull-request.yaml  release.yaml
docs/: index.html
information/: admin.py  models.py  views.py
information/management/commands/: deleteallusers.py
information/migrations/: 0001_initial.py  0002_alter_myself_professional_description.py  0003_alter_job_end_date.py
information/static/information/: style.css
information/templates/information/: articles.html  coding.html  education.html  education_quick.html  jobs.html  math.html  notes.html  posters_presentations.html  single_article.html  skills.html  software.html  talks.html  teaching.html  topnav.html
personal_site/: settings.py  urls.py
