[project]
name = "benjaminschmidt-github-io"
version = "0.0.0"
description = "The code for the personal website of Benjamin Schmidt using Django"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django==6.0",
    "gunicorn==23.0.0",
    "pillow==12.0.0",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1",
]
