[project]
name = "personal-website"
version = "0.0.0"
description = "The code for the personal website of Benjamin Schmidt using Django"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django==6.0.3",
    "gunicorn==25.3.0",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.3",
    "python-dotenv==1.2.2",
]

[tool.uv]
exclude-newer = "3 days"